--- a/assets/styles/templates/partials/_navbar.scss
+++ b/assets/styles/templates/partials/_navbar.scss
@@ -82,8 +82,10 @@
     }
 }
 
-body.email-is-hover .Navbar a {
-    color: var(--color-white);
+@include desktop {
+    body.email-is-hover .Navbar a {
+        color: var(--color-white);
+    }
 }
 
 body.showreel-open .Navbar {
